# permission-pipeline

./: .pre-commit-config.yaml  MODERNIZATION_PLAN.md  MODERN_FEATURES.md  Makefile  RISK_SCORING_GUIDE.md  cicd_monitor_config.yaml  deploy_access_analyzer_role.tf  pyproject.toml  run_demo_standalone.py  security_tracking.db  setup.py  step3_progress_report_20250614_215552.txt
.github/workflows/: build.yml  security-monitoring.yml  unit-test.yml
airiam/: main.py
airiam/analyzers/: __init__.py  access_analyzer_integration.py  identity_risk_scorer.py  security_risk_analyzer.py
airiam/cicd/: __init__.py  risk_monitor.py
airiam/generators/: __init__.py  modern_policy_generator.py
airiam/integrations/: __init__.py  aws_risk_analyzer.py
airiam/reporters/: __init__.py  executive_templates.py  risk_score_reporter.py
airiam/tracking/: __init__.py  improvement_tracker.py
aws_risk_reports/: iam_risk_dashboard_20250614_221617.html
demo_risk_reports/: dashboard_preview.md  iam_risk_dashboard_20250614_211940.html
examples/: complete_workflow_demo.py  dashboard_visualizer.py  demo_data.py  modern_iam_demo.py  risk_scoring_demo.py  simple_demo.py
iam-terraform-results/: policies.tf  roles.tf  users.tf
iam-terraform-results/iam-terraform-results/: policies.tf  roles.tf  users.tf
step2_executive_reports_20250614_215327/: board_presentation.txt  compliance_report.txt
step2_executive_reports_20250614_215400/: board_presentation.txt  compliance_report.txt
step2_executive_reports_20250614_215438/: board_presentation.txt  compliance_report.txt
step2_executive_reports_20250614_215552/: board_presentation.txt  business_impact_assessment.txt  compliance_report.txt
tests/: test_airiam.py
